# MUCO-Server

./: .gitignore  BufferSlice.cs  Caddyfile  Caddyfile.backend  Cargo.toml  Client.cs  Dockerfile  Message.cs  Program.cs  README.md  Serialize.cs  Server.cs  cert.pem  cert_config.conf  docker-compose.backend.yml  docker-compose.yml  generate_cert.sh  key.pem  port_test.sh  server_data.txt
.claude/: ARCHITECTURE.md
client_emulator/: Cargo.toml
client_emulator/src/: console_cmd.rs  console_input.rs  main.rs
discover_server/: Cargo.toml
discover_server/src/: lib.rs
discoverable_service/: Cargo.toml
discoverable_service/src/: lib.rs
manager/: Cargo.toml
manager/src/: color.rs  connection_info.rs  connection_status.rs  console_input.rs  context.rs  discovery.rs  handler.rs  headset_data.rs  inter_client_msg.rs  main.rs  player_data.rs  player_data_msg.rs  process_server_client_msg.rs  relay_server_connection_process.rs  server.rs  status.rs  ws.rs
msgs/: Cargo.toml
msgs/src/: client_server_msg.rs  client_type.rs  dequeue.rs  discover_server.rs  inter_client_msg.rs  lib.rs  manager_client_msg.rs  model.rs  network_version.rs  player_data.rs  player_data_msg.rs  relay_server_connection_process.rs  server_client_msg.rs
photo_server/: Cargo.toml
photo_server/src/: main.rs
server/: Cargo.toml
server/src/: broadcast_msg.rs  client.rs  client_db.rs  main.rs  register_mdns.rs
src/: client.rs  client_db.rs  main.rs  msgs.rs
