[workspace]

resolver = "2"

members = [
    "client_emulator",
    "discover_server",
    "discoverable_service",
    "manager",
    "msgs",
    "photo_server",
    "server",
]

[workspace.dependencies]
tokio = { version = "1.28" }
tokio-stream = "0.1"
byteorder = "1.4"
local-ip-address = "0.5"
anyhow = "1.0"
chrono = "0.4"

warp = "0.3"
serde = "1.0"
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = "1.1"

pollster = "0.3"

mdns-sd = "0.11"

bytes = "1.7.1"

# OpenSSL with vendored feature for automatic compilation
openssl = { version = "0.10", features = ["vendored"] }

# ACME client for Let's Encrypt certificates (disabled for now)
# instant-acme = "0.6"
# rcgen = "0.12"
