[package]
name = "client_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread"] }
#tokio-stream = { workspace = true }
warp = { workspace = true }
#serde = { workspace = true, features = ["derive"] }
#serde_json = { workspace = true }
#futures = { workspace = true }
#uuid = { workspace = true, features = ["serde", "v4"] }

pollster = { workspace = true }
anyhow = { workspace = true }

byteorder = { workspace = true }

msgs = { path = "../msgs" }