[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = { workspace = true }
warp = { workspace = true, features = ["tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
local-ip-address = "0.6"
reqwest = { version = "0.11", features = ["json"] }
openssl = { workspace = true }

pollster = { workspace = true }
anyhow = { workspace = true }

byteorder = { workspace = true }

msgs = { path = "../msgs" }
