[package]
name = "msgs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread"] }
mdns-sd = { workspace = true }
